BRIC-106 remove button annulla l´ordine

--- a/sass/vtex.order-placed.scss
+++ b/sass/vtex.order-placed.scss
@@ -126,6 +126,7 @@
             }
 
             .cancelOrderButton {
+                display: none;//remove button  Annulla L´ordine
                 :global(.vtex-button) {
                     background: #fff;
                     border: 2px solid #fff;
