Chenge Text Login

--- a/sass/login/vtex.login.scss
+++ b/sass/login/vtex.login.scss
@@ -85,9 +85,9 @@
                 .accessCodeOptionBtn {
 
                     &::after {
-                         content: "Maecenas efficitur feugiat orci, sit amet ullamcorper leo. Sed sit amet felis id ex ornare dignissim faucibus sed mi.";
+                         content: "Registrati ed entra a far parte della community del bricolage più grande d'Italia";
                          height: 60px;
-                         width: 360px;
+                         width: 340px;
                          color: #332C32;
                          font-family: Roboto;
                          font-size: 16px;
