Add prop in Search Result

--- a/checkout-ui-custom/checkout6-custom.css
+++ b/checkout-ui-custom/checkout6-custom.css
@@ -4847,3 +4847,8 @@ body.debug-on > *:not(.container-main):not(.main-header):not(.main-footer):not(#
 #shipping-calculate-link {
   opacity: 0;
 }
+
+/* Hide Richiesta Fattura */
+#requestInvoice {
+  display: none;
+}
