BRIC-132 adjusted padding on filterTotalProducts mobile

--- a/sass/search/vtex.search-result.scss
+++ b/sass/search/vtex.search-result.scss
@@ -1029,6 +1029,7 @@
   transform: translate(234px, -42px);
   max-width: 136px;
   font-weight: 500;
+  padding-bottom: 20px;
 
   &::after {
     content: ")";
