--- a/sass/home/vtex.rich-text.scss
+++ b/sass/home/vtex.rich-text.scss
@@ -114,7 +114,7 @@
       font-size: 18px;
       line-height: 1.5rem;
       max-width: 25rem;
-      margin: 2rem 0;
+      margin: 30px 0;
       @include breakpoint('mobile') {
         margin: 0 1rem;
         text-align: center;
