Ajusta a cor do botão ver mais dentro do container de filtros na pagina Search Result

--- a/sass/search/vtex.search-result.scss
+++ b/sass/search/vtex.search-result.scss
@@ -576,6 +576,9 @@
   .filter__container {
     .filterTemplateOverflow {
       max-height: 214px !important;
+      .seeMoreButton {
+        color: #1B0E41;
+      }
       @include desktop {
         :global(.vtex-slider-container) {
           transform: translateY(43px);
