--- a/sass/header/vtex.login.scss
+++ b/sass/header/vtex.login.scss
@@ -50,10 +50,12 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    white-space: pre-line;
+    white-space: pre-wrap;
     line-height: 14px;
     text-align: left;
     margin-right: 20px;
+    max-width: 75px;
+    color: $primary-default;
     &::after {
       content: "";
       position: absolute;
