--- a/sass/search/vtex.search-result.scss
+++ b/sass/search/vtex.search-result.scss
@@ -574,6 +574,12 @@
     height: 20px;
   }
   .filter__container {
+    .caretIcon {
+      transform: scaleY(0.7);
+      color: #332C32;
+      opacity: 0.7;
+    }
+
     .filterTemplateOverflow {
       max-height: 216px !important;
       @include desktop {
