--- a/sass/search/vtex.search-result.scss
+++ b/sass/search/vtex.search-result.scss
@@ -243,6 +243,9 @@
       .caretIcon {
         width: 20px;
         height: 20px;
+        transform: scaleY(0.7);
+        color: #332C32;
+        opacity: 0.7;
       }
     }
     .filterPopupTitle {
@@ -475,6 +478,9 @@
     .caretIcon {
       width: 20px;
       height: 20px;
+      transform: scaleY(0.7);
+      color: #332C32;
+      opacity: 0.7;
     }
   }
 
@@ -734,6 +740,7 @@
             font-weight: 400;
             line-height: 19px;
             color: #332c32;
+            margin-bottom: 10px;
           }
 
           :global(.vtex-checkbox__inner-container) {
@@ -910,6 +917,9 @@
   @include breakpoint('mobile') {
     width: 20px;
     height: 20px;
+    transform: scaleY(0.7);
+    color: #332C32;
+    opacity: 0.7;
   }
 }
 
