--- a/sass/search/vtex.search-result.scss
+++ b/sass/search/vtex.search-result.scss
@@ -156,20 +156,7 @@
     color: #332c32;
     line-height: 25px;
 
-    // &::before {
-    //   content: 'Mostrando ';
-    //   display: inline;
-    //   font-size: 16px;
-    //   font-weight: 400;
-    //   color: #332C32;
-    //   line-height: 19px;
-    // }
     &::after {
-      // content: ' produtos';
-      // display: inline;
-      // font-weight: 400;
-      // color: #332C32;
-      // line-height: 19px;
       content: ' articoli trovati';
     }
   }
@@ -188,23 +175,7 @@
   @include breakpoint('mobile') {
     margin-block: auto;
     min-width: 180px;
-    //width: auto;
-    //margin: 0 30px;
-    //margin-right: 34px;
   }
-  // &::after {
-  //   @media screen and (max-width: 768px) {
-  //     content: '';
-  //     width: 2px;
-  //     height: 16px;
-  //     display: block;
-  //     background: #ddd;
-  //     top: 50%;
-  //     right: 16px;
-  //     position: absolute;
-  //     transform: translateY(-50%);
-  //   }
-  // }
 
   .orderByDropdown {
     justify-content: flex-end;
@@ -488,6 +459,9 @@
   .filter__container {
     margin-bottom: 1.2rem;
     order: 4;
+    &--category-3{
+      display: none;
+    }
   }
 
   .filter__container--selectedFilters,
@@ -694,7 +668,9 @@
       .accordionFilterContainer--filterMobile {
         padding-left: 1rem;
         margin-right: 1rem;
-
+        &--subcategory{
+          display: none;
+        }
         .accordionFilterItem--filterMobile {
           border-bottom-style: none;
         }
@@ -715,7 +691,9 @@
       .accordionFilterOpen--filterMobile {
         transform: translateX(-3rem);
         padding-bottom: 1rem;
-
+        &--subcategory{
+          display: none;
+        }
         .filterAccordionItemBox {
           min-height: 1.5rem;
           border: none;
