--- a/sass/search/vtex.search-result.scss
+++ b/sass/search/vtex.search-result.scss
@@ -574,7 +574,14 @@
     height: 20px;
   }
 
+  .filterTemplateOverflow::webkit-scrollbar-thumb {
+    border-radius: 6px;
+  };
+
   .filterTemplateOverflow {
+    scrollbar-width: thin;
+    scrollbar-color: #B8B8B8 transparent;
+
     @include desktop {
       :global(.vtex-slider-container) {
         transform: translateY(43px);
@@ -637,6 +644,8 @@
       overflow-y: auto;
       overflow-x: hidden;
       padding-bottom: 1rem;
+      scrollbar-width: thin;
+      scrollbar-color: #B8B8B8 transparent;
 
       &::-webkit-scrollbar {
         width: 6px;
