BRIC-159 new adjustments to components' height in minicart

--- a/sass/header/vtex.flex-layout.scss
+++ b/sass/header/vtex.flex-layout.scss
@@ -94,11 +94,11 @@
   }
 }
 
-.flexRow--minicart-footer {
-  @include breakpoint('desktop') {
-    height: 80%;
-  }
-}
+// .flexRow--minicart-footer {
+//   @include breakpoint('desktop') {
+//     height: 80%;
+//   }
+// }
 
 .flexRowContent--minicart-footer {
   background-color: #F4F7FA;
