--- a/sass/footer/vtex.slider-layout.scss
+++ b/sass/footer/vtex.slider-layout.scss
@@ -2,7 +2,7 @@
 @import '../_variables.scss';
 
 .sliderLayoutContainer {
-  
+
   &--home-main-slider-images {
     border-radius: 0;
   }
@@ -28,12 +28,14 @@
 
     .caretIcon {
       &--home-main-slider-images,
-      &--shelf-also-view,
       &--quemSomos-carrosel {
         width: 16px !important;
         height: 16px;
         display: flex;
         overflow: visible;
+      }
+      &--shelf-also-view{
+        display: none;
       }
     }
   }
