--- a/sass/footer/vtex.flex-layout.scss
+++ b/sass/footer/vtex.flex-layout.scss
@@ -120,9 +120,13 @@
     }
   }
   &--footer-PaymentImagesRow  {
+    max-width: 532px;
+    justify-content: space-between;
+
     @include breakpoint('mobile') {
       display: flex;
       flex-flow: row wrap;
+      justify-content: flex-start;
       //justify-content: center !important;
       column-gap: 10px;
       row-gap: 10px;
