--- a/sass/footer/vtex.rich-text.scss
+++ b/sass/footer/vtex.rich-text.scss
@@ -19,7 +19,7 @@
   &--footer-PaymentMethodsTitle,
   &--footer-PaymentMethodsDescription {
     color: $white;
-    padding: 10px 15px 10px;
+    padding: 10px 15px 10px 0;
     @include breakpoint('mobile') {
       padding-left: 0;
     }
