BRIC-168 Update card product name to left

--- a/sass/product/vtex.product-summary.scss
+++ b/sass/product/vtex.product-summary.scss
@@ -127,7 +127,7 @@
 
 .container--summaryComplete .productNameContainer .brandName {
   width: 100%;
-  text-align: center;
+  text-align: start;
   display: -webkit-box;
   -webkit-line-clamp: 2;
   -webkit-box-orient: vertical;
