--- a/sass/vtex.my-account.scss
+++ b/sass/vtex.my-account.scss
@@ -975,16 +975,19 @@
 
           :global(.vtex-product-summary-2-x-brandName) {
             width: 100%;
-            text-align: center;
+            max-width: 160px;
+            text-align: start;
             overflow: hidden;
+            display: -webkit-box;
+            -webkit-line-clamp: 2;
+            -webkit-box-orient: vertical;
             text-overflow: ellipsis;
             font-style: normal;
             font-weight: 400;
             font-size: 16px;
             line-height: 20px;
             color: $primary-default;
-            padding-bottom: 10px;
-            margin-bottom: 15px;
+            margin-bottom: 25px;
           }
         }
 
