BRIC-163 changing slider arrows to link at home page

--- a/sass/home/vtex.store-link.scss
+++ b/sass/home/vtex.store-link.scss
@@ -134,7 +134,7 @@
     }
   }
   &--home-shelf{
-    // display: block;
+    display: flex;
     justify-content: flex-end;
     text-decoration: none;
     color: $blue-dark-text;
