--- a/sass/vtex.my-account.scss
+++ b/sass/vtex.my-account.scss
@@ -64,6 +64,12 @@
       }
     }
     .menuLinks {
+
+      .menuLink {
+        font-weight: bold;
+        color: #1d1e2c;
+      }
+      
       div div:nth-child(5) a{
         position: relative;
         &::after{
@@ -79,6 +85,7 @@
           @media screen and (max-width: 48rem) {
             padding-left: 16px;
             left: -16px;
+            height: 42px;
           }
         }
       }
@@ -90,7 +97,7 @@
           top: 0;
           left: 10px;
           width: 110px;
-          height: 44px;
+          height: 36px;
           display: flex;
           background-color: #fff;
           content: 'La mia lista dei desideri';
@@ -98,6 +105,7 @@
           @media screen and (max-width: 48rem) {
             padding-left: 16px;
             left: -16px;
+            height: 42px;
           }
         }
       }
@@ -105,13 +113,16 @@
       :global(.vtex-account_menu-link.b--action-primary) {
         color: #402493;
         border-left: 4px solid #402493;
-        font-weight: 400;
+        //font-weight: 400;
+        font-weight: bold;
         height: 32px;
       }
 
       :global(.vtex-account_menu-link.b--transparent) {
-        color: $primary-default;
-        font-weight: 400;
+        // color: $primary-default;
+        // font-weight: 400;
+        color: #1d1e2c;
+        font-weight: bold;
       }
     }
   }
@@ -1024,6 +1035,12 @@
         border-bottom: 1px solid #d8d8d8;
       }
       .menuLinks {
+
+        .menuLink {
+          font-weight: bold;
+          color: #1d1e2c;
+        }
+
         &::before {
           content: '/ Il mio profilo';
           transform: translateY(-126px);
@@ -1348,4 +1365,10 @@
 
 .userName {
   font-weight: bold;
+}
+
+.userGreeting {
+  font-size: 18px;
+  font-weight: 500;
+  color: #1d1e2c;
 }
