--- a/sass/footer/vtex.flex-layout.scss
+++ b/sass/footer/vtex.flex-layout.scss
@@ -9,7 +9,8 @@
     margin: 0;
 
     @media screen and (max-width: 768px) {
-      padding: 48px 24px 0;
+      //padding: 48px 24px 0;
+      padding: 48px 15px 0;
     }
   }
   &--footer-upperFooterDesktop {
@@ -33,7 +34,8 @@
     padding: 0 30px 0 20px;
     background-color: $background-footer;
     @include breakpoint('mobile') {
-      padding: 0 28px;
+      //padding: 0 28px;
+      padding: 0 15px;
     }
   }
   &--bottomFooterDesktop {
@@ -112,7 +114,7 @@
     @include breakpoint('mobile') {
       display: flex;
       flex-flow: row wrap;
-      max-width: 85vw;
+      //max-width: 85vw;
       .stretchChildrenWidth {
         width: max-content !important;
         margin: 1px;
