--- a/sass/header/vtex.disclosure-layout.scss
+++ b/sass/header/vtex.disclosure-layout.scss
@@ -27,18 +27,23 @@
 }
 
 .content--header-disclosureContent {
-  padding: 45px 0;
+  padding: 42px 0;
   width: 100%;
   :global(.vtex-rich-text-0-x-container) {
     position: absolute;
     left: 0;
-    padding: 10px;
+    //padding: 10px;
     top: 40px;
     color: $white;
     font-size: 14px;
     max-width: 1313px;
     text-align: center;
     overflow: hidden;
+
+    :global(.vtex-rich-text-0-x-paragraph) {
+      margin-top: 2px;
+      margin-bottom: 0px;
+    }
   }
 }
 
