BRIC-172 repositioning elements in my account

--- a/sass/vtex.my-account.scss
+++ b/sass/vtex.my-account.scss
@@ -1058,7 +1058,7 @@
           :global(.vtex-button) {
             top: -18px;
             left: unset;
-            right: 6px;
+            right: -12px;
           }
         }
       }
@@ -1189,7 +1189,7 @@
             font-size: 30px;
             line-height: 20px;
             padding-top: 24px;
-            padding-left: 1rem;
+            padding-left: 4px;
           }
           :global(.vtex-pageHeader__children) {
             position: absolute;
