--- a/react/components/ProductCardLogged/styles.css
+++ b/react/components/ProductCardLogged/styles.css
@@ -29,6 +29,7 @@
     font-weight: 500;
     letter-spacing: 0;
     line-height: 24px;
+    margin: 0 0 30px;
 }
 
 .linkCardProductLogged {
@@ -58,7 +59,7 @@
     line-height: 16px;
     max-width: 150px;
     width: 100%;
-    margin-bottom: 40px;
+    margin: 0 0 40px;
 
     display: -webkit-box;
     -webkit-line-clamp: 2;
