BRIC-174 button alingment adjustment

--- a/sass/product/vtex.product-summary.scss
+++ b/sass/product/vtex.product-summary.scss
@@ -355,7 +355,7 @@
   :global(.vtex-button__label) {
     font-size: 14px;
     font-weight: 600;
-    padding: 0;
+    padding: 0!important;
     color: $blue-dark;
     &:hover {
       color: #fff;
