--- a/sass/header/vtex.minicart.scss
+++ b/sass/header/vtex.minicart.scss
@@ -4,6 +4,7 @@
 .drawer{
   &--minicart-background{
     max-width: 440px !important;
+    max-height: 90vh;
   }
 }
 .minicartWrapperContainer {
@@ -70,6 +71,21 @@
 }
 .drawerContent--minicart-background {
   background-color: #FFF;
+  @include breakpoint('desktop') {
+    overflow-y: clip;
+  }
+
+  .childrenContainer--minicart-background {
+    @include breakpoint('desktop') {
+      height: calc(90vh - 59px);
+    }
+
+    .minicartSideBarContentWrapper--minicart-background {
+      @include breakpoint('desktop') {
+        height: inherit !important;
+      }
+    }
+  }
 }
 
 .minicartCheckoutButton {
