BRIC-159 corrections to mobile behavior

--- a/sass/header/vtex.minicart.scss
+++ b/sass/header/vtex.minicart.scss
@@ -4,7 +4,11 @@
 .drawer{
   &--minicart-background{
     max-width: 440px !important;
-    max-height: 90vh;
+    @include breakpoint ('desktop') {
+      max-height: 90vh;
+
+    }
+   
   }
 }
 .minicartWrapperContainer {
