BRIC-162 added custom component to change login button color based on form input

--- a/sass/login/vtex.login.scss
+++ b/sass/login/vtex.login.scss
@@ -266,6 +266,10 @@
                   text-transform: initial;
                   transition: 1s ease-in-out;
 
+                  &--buttonActive {
+                    background: #291660;
+                  }
+                  
                   &:hover {
                     background: #1B0E41;
                 }
