--- a/sass/product/vtex.flex-layout.scss
+++ b/sass/product/vtex.flex-layout.scss
@@ -410,6 +410,10 @@
 }
 .flexRow--summaryTop{
   z-index: 1;
+  @include breakpoint('mobile') {
+    z-index: 3;
+    margin-bottom: -10px;
+  }
 }
 .flexRowContent--summaryTop {
   :global(.vtex-wish-list-1-x-wishlistIconContainer) {
@@ -426,6 +430,9 @@
 .flexCol {
   &--summaryInfo {
     padding: 18px 10px 10px;
+    @include breakpoint('mobile') {
+      margin-top: 20px;
+    }
   }
 
   &--buyButtonContainer {
